--- a/src/app/compartidos/sidebar/sidebar.component.html
+++ b/src/app/compartidos/sidebar/sidebar.component.html
@@ -492,12 +492,12 @@
         </li>
       </ng-container>
 
-      <!-- <li>
-        <a rel="soporte" href="https://next-technologies.kayako.com/conversation/new" target="_blank">
+      <li>
+        <a rel="soporte" href="https://ayuda.next-technologies.com.mx/support/home" target="_blank">
           <em class="fa fa-headphones"></em>
           <span> Soporte </span>
         </a>
-      </li> -->
+      </li>
 
       <li>
         <a href="javascript:;" class="d-none d-md-block  sidebar-minify-btn" (click)="toggleMinified()">
