[fix] elimina flujo de aprobación

--- a/src/app/modulos/flujo-aprobacion/carga-monedas/carga-monedas.component.html
+++ b/src/app/modulos/flujo-aprobacion/carga-monedas/carga-monedas.component.html
@@ -11,7 +11,7 @@
         <!-- [disabled]="!guardado || array_monedas_cargadas.length != contador" -->
         <button href="javascript:;"
           *ngIf="guardado && (array_monedas_cargadas.length == contador || contadoFlujosEdit == contador )"
-          class="btn btn-xs btn-icon btn-circle btn-danger" (click)="eliminarFlujo($event)">
+          class="btn btn-xs btn-icon btn-circle btn-danger" (click)="eliminarFlujo($event,divNivelContainer)">
           <i class="fa fa-times"></i>
         </button>
 
